# docref

./: CLAUDE.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
src/: commands.rs  config.rs  diagnostics.rs  error.rs  freshness.rs  grammar.rs  hasher.rs  info.rs  lockfile.rs  main.rs  namespace.rs  resolver.rs  scanner.rs  types.rs  watch.rs
tests/: integration.rs
tests/fixtures/bash/docs/: guide.md
tests/fixtures/bash/src/: deploy.sh
tests/fixtures/basic/docs/: api.md  guide.md  overview.md
tests/fixtures/basic/src/: app.ts  lib.rs
tests/fixtures/configured/: .docref.toml
tests/fixtures/configured/docs/: guide.md
tests/fixtures/configured/src/: lib.rs
tests/fixtures/golang/docs/: guide.md
tests/fixtures/golang/src/: main.go
tests/fixtures/javascript/docs/: guide.md
tests/fixtures/javascript/src/: app.js
tests/fixtures/monorepo/: .docref.toml
tests/fixtures/monorepo/services/web/: .docref.toml
tests/fixtures/monorepo/services/web/docs/: guide.md
tests/fixtures/monorepo/services/web/src/: lib.rs
tests/fixtures/namespaced/: .docref.toml
tests/fixtures/namespaced/docs/: guide.md
tests/fixtures/namespaced/services/auth/src/: lib.rs
tests/fixtures/python/docs/: guide.md
tests/fixtures/python/src/: app.py
tests/fixtures/scoped/docs/: guide.md  overview.md  ref.md
tests/fixtures/scoped/src/: lib.rs
tests/fixtures/subdecl/docs/: guide.md
tests/fixtures/subdecl/src/: app.ts  lib.rs
tests/fixtures/wholefile/docs/: guide.md
tests/fixtures/wholefile/src/: lib.rs
