[package]
name = "docref"
version = "0.1.0"
edition = "2024"
description = "Semantic code references for markdown — detect when referenced code changes"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "suggestions"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
toml_edit = "0.22"
tree-sitter = "0.25"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
